--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.6",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "dotenv": "^16.3.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
